Added new properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,3 +38,10 @@ spring.kafka.producer.properties.request.timeout.ms=30000
 # This ensures each message is delivered exactly once, even if failures occur.
 # When enabled, Kafka automatically sets `retries=Integer.MAX_VALUE` and enforces `acks=all`.
 spring.kafka.producer.properties.enable.idempotence=true
+
+# The maximum number of unacknowledged requests that can be sent on a single connection before blocking further sends.
+# A lower value (e.g., 1) ensures strict ordering but may reduce throughput.
+# A higher value (e.g., 5) improves throughput but can lead to out-of-order messages in case of retries.
+# When `enable.idempotence=true`, this value must be ? 5 to prevent duplicate or out-of-order messages.
+spring.kafka.producer.properties.max.in.flight.requests.per.connection=5
+
