--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com</groupId>
-    <artifactId>kafka_tutorial</artifactId>
+    <artifactId>kafka_producer</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>kafka_tutorial</name>
     <description>kafka_tutorial</description>
@@ -30,6 +30,11 @@
         <java.version>21</java.version>
     </properties>
     <dependencies>
+        <dependency>
+            <groupId>com</groupId>
+            <artifactId>shared_core_library</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
